sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var length : Int = getValueCount();
  var i : Int = 0;
  var tri : Boolean = true;
  
  while(tri)
	{
  	tri = false;
    for(i<-0 to length-2)
    {
      if(getValue(i)<getValue(i+1))
      {
        swap(i,j);
        tri=true;
      }
    }
  }
    
}